--- a/ckan/templates/home/snippets/promoted.html
+++ b/ckan/templates/home/snippets/promoted.html
@@ -5,7 +5,7 @@
     {% if intro %}
       {{ h.render_markdown(intro) }}
     {% else %}
-      <h1 class="page-heading">{{ _("Welcome to CKAN") }}</h1>
+      <h3 class="page-heading">{{ _("Selamat Datang di Portal Satu Data Kab. Langkat") }}</h3>
       <p>
         {% trans %}This is a nice introductory paragraph about CKAN or the site
         in general. We don't have any copy to go here yet but soon we will
