edit promoted text

--- a/ckan/templates/home/snippets/promoted.html
+++ b/ckan/templates/home/snippets/promoted.html
@@ -7,8 +7,7 @@
     {% else %}
       <h3 class="page-heading">{{ _("Selamat Datang di Portal Satu Data Kab. Langkat") }}</h3>
       <p>
-        {% trans %}This is a nice introductory paragraph about CKAN or the site
-        in general. We don't have any copy to go here yet but soon we will
+        {% trans %}Portal Satu Data Kabupaten Langkat merupakan portal resmi data terbuka Kab. Langkat yang dikelola oleh Dinas Komunikasi, Informatika, Statistik dan Persandian Kabupaten Langkat.
         {% endtrans %}
       </p>
     {% endif %}
